notifications, form image input

--- a/Frontend/src/Components/LayoutArea/Header/Header.css
+++ b/Frontend/src/Components/LayoutArea/Header/Header.css
@@ -36,8 +36,13 @@
 .Header button {
     background-color: rgba(0,0,0,0.15);
     border: 0px solid transparent;
-    padding: 6px 16px;
-    border-radius: 4px;
+    /* padding: 6px 16px; */
+    /* border-radius: 4px; */
     color: white;
-    font-weight: 200;
+    /* font-weight: 200; */
+}
+
+.Header button:hover {
+    background-color: rgba(0,0,0,0.2);
+
 }
