--- a/Frontend/src/Components/AuthArea/Login/Login.css
+++ b/Frontend/src/Components/AuthArea/Login/Login.css
@@ -4,14 +4,62 @@
     row-gap: 16px;
     margin: auto;
     width: min-content;
-    padding: 32px 24px;
-    background-color: rgb(230, 230, 230);
+    min-width: 350px;
+    padding: 40px 40px 40px 40px;
+    background-color: white;
     border-radius: 8px;
+    color: var(--Neutral-700);
+    border: 1px solid var(--Neutral-100);
+}
+form h2 {
+    color: var(--Prime-500);
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+form .hint {
+    font-size: 12px;
+    margin-top: 4px;
+    margin-left: 6px;
+    margin-right: 6px;
+    color: red;
 }
 
 .Login .input-label-wrapper{
     display: flex;
     flex-direction: column;
-    row-gap: 4px;
+    row-gap: 2px;
     align-items: flex-start;
+    font-size: 16px;
+}
+
+.Login .input-label-wrapper label {
+    margin-left: 6px;
+}
+.Login .input-label-wrapper input {
+    border: 1px solid var(--Neutral-200);
+    border-radius: 4px;
+    height: 40px;
+    padding: 8px 16px;
+    width: 100%;
+}
+
+.Login form button {
+    margin-top: 8px;
+    background-color: var(--Prime-500);
+    border: 0px solid transparent;
+    border-radius: 4px;
+    padding: 10px 16px;
+    color: white;
+    font-weight: 400;
+    transition: all;
+    transition-duration: 200ms;
+}
+.Login form button:hover {
+    cursor: pointer;
+    background-color: var(--Prime-700);
+}
+
+span:last-of-type {
+    text-align: center;
 }
