--- a/Frontend/src/Components/VacationsArea/AddVacation/AddVacation.css
+++ b/Frontend/src/Components/VacationsArea/AddVacation/AddVacation.css
@@ -4,18 +4,121 @@
     row-gap: 16px;
     margin: auto;
     width: min-content;
-    padding: 32px 24px;
-    background-color: rgb(230, 230, 230);
+    min-width: 350px;
+    padding: 40px 40px 40px 40px;
+    background-color: white;
     border-radius: 8px;
+    color: var(--Neutral-700);
+    border: 1px solid var(--Neutral-100);
+}
+form h2 {
+    color: var(--Prime-500);
+    text-align: center;
+    margin-bottom: 16px;
 }
 
-.AddVacation .input-label-wrapper{
+.AddVacation .input-label-wrapper {
     display: flex;
     flex-direction: column;
-    row-gap: 4px;
+    row-gap: 2px;
     align-items: flex-start;
+    font-size: 16px;
 }
 
-form input {
+.AddVacation .input-label-wrapper label {
+    margin-left: 6px;
     width: 100%;
+}
+.AddVacation .input-label-wrapper input {
+    border: 1px solid var(--Neutral-200);
+    border-radius: 4px;
+    height: 40px;
+    padding: 8px 16px;
+    width: 100%;
+}
+form .hint {
+    font-size: 12px;
+    margin-top: 4px;
+    margin-left: 6px;
+    margin-right: 6px;
+    color: red;
+}
+
+form textarea {
+    width: 100%;
+    height: 100px;
+}
+.AddVacation form button {
+    margin-top: 8px;
+    background-color: var(--Prime-500);
+    border: 0px solid transparent;
+    border-radius: 4px;
+    padding: 10px 16px;
+    color: white;
+    font-weight: 400;
+    transition: all;
+    transition-duration: 200ms;
+}
+.AddVacation form button:hover {
+    cursor: pointer;
+    background-color: var(--Prime-700);
+}
+
+.AddVacation form button.secondary {
+    color: var(--Neutral-700);
+    border: 1px solid var(--Neutral-700);
+    background-color: transparent;
+    margin-top: 0px;
+}
+.AddVacation form input#price {
+    background-image: url("http://localhost:3001/static/icons/AttachMoney.svg");
+    background-repeat: no-repeat;
+    background-size: 18px;
+    background-position: left 12px center;
+    padding-left: 32px;
+}
+
+.AddVacation form .image-change {
+    position: relative;
+    cursor: pointer;
+    height: 150px;
+    width: 100%;
+    background-size: cover;
+    transform: translateX(-6px);
+    border-radius: 4px;
+}
+.AddVacation form .image-change.no-image {
+    border: 1px solid var(--Neutral-200);
+    background-repeat: no-repeat;
+    background-image: url("http://localhost:3001/static/icons/placeholder-image.png");
+    background-position: center;
+    
+}
+
+.AddVacation form .image-change:hover span {
+    background-color: var(--Prime-500);
+}
+
+.AddVacation form .image-change span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -50%);
+    background-color: rgba(98, 98, 98, 0.6);
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 6px 16px;
+    font-weight: 400;
+    transition: all;
+    transition-duration: 200ms;
+    width: max-content;
+}
+.AddVacation form input#image {
+    /* position: absolute; */
+    opacity: 0%;
+}
+
+span:last-of-type {
+    text-align: center;
 }
