--- a/Frontend/src/Components/VacationsArea/Vacations/Vacations.css
+++ b/Frontend/src/Components/VacationsArea/Vacations/Vacations.css
@@ -17,3 +17,30 @@
     display: flex;
     justify-content: center;
 }
+
+.Vacations .action-nav {
+    display: flex;
+    flex-direction: row;
+    column-gap: 8px;
+    padding: 16px 0px;
+    margin-bottom: 32px;
+    border-bottom: 1px solid var(--Neutral-200);
+}
+.Vacations .action-nav button {
+    display: flex;
+    border: 1px solid transparent;
+    color: var(--Neutral-700);
+    justify-content: center;
+    align-items: center;
+}
+.Vacations .action-nav button:hover {
+    /* background-color: var(--Prime-200); */
+    border: 1px solid var(--Prime-500);
+    color: var(--Prime-500);
+}
+
+.Vacations .action-nav button.active {
+    background-color: var(--Prime-500);
+    border: 1px solid transparent;
+    color: white;
+}
