--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -84,13 +84,36 @@ body,
     --Neutral-400:hwb(216 91% 40%);
     --Neutral-500:hwb(216 91% 50%);
     --Neutral-600:hwb(216 91% 60%);
-    --Neutral-700:hwb(216 91% 70%);
+    --Neutral-700:hwb(0 56% 44%);
     --Success-100: #3DD4AF;
-    --Prime-500: #0294E8;
-    --Prime-700: #0475F1;
+    --Prime-200: hwb(202 1% 0%);
+    --Prime-300: hwb(202 1% 3%);
+    --Prime-400: hwb(202 1% 6%);
+    --Prime-500: hwb(202 1% 9%);
+    --Prime-700: hwb(211 2% 5%);
     /*  */
     height: 100%;
     background-color: var(--Neutral-50);
     font-family: 'Roboto', sans-serif;
     font-weight: 200;
+}
+
+a {
+    color: var(--Prime-700);
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 6px 16px;
+    font-weight: 400;
+    transition: all;
+    transition-duration: 200ms;
+}
+
+.notification {
+    /* min-width: 100%; */
+    background-color: #3DD4AF;
 }
