--- a/Frontend/src/Components/VacationsArea/AddVacation/AddVacation.css
+++ b/Frontend/src/Components/VacationsArea/AddVacation/AddVacation.css
@@ -122,3 +122,23 @@ form textarea {
 span:last-of-type {
     text-align: center;
 }
+
+.AddVacation .action-nav {
+    display: flex;
+    flex-direction: row;
+    column-gap: 8px;
+    padding: 16px 0px;
+    margin-bottom: 32px;
+    border-bottom: 1px solid var(--Neutral-200);
+}
+.AddVacation .action-nav button {
+    display: flex;
+    border: 1px solid transparent;
+    color: var(--Neutral-700);
+    justify-content: center;
+    align-items: center;
+}
+.AddVacation .action-nav button:hover {
+    border: 1px solid var(--Prime-500);
+    color: var(--Prime-500);
+}
