--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -85,12 +85,12 @@ body,
     --Neutral-500:hwb(216 91% 50%);
     --Neutral-600:hwb(216 91% 60%);
     --Neutral-700:hwb(0 56% 44%);
-    --Success-100: #3DD4AF;
+    --Success-100: rgb(61, 212, 175);
     --Prime-200: hwb(202 1% 0%);
     --Prime-300: hwb(202 1% 3%);
     --Prime-400: hwb(202 1% 6%);
-    --Prime-500: hwb(202 1% 9%);
-    --Prime-700: hwb(211 2% 5%);
+    --Prime-500: rgb(3, 148, 232);
+    --Prime-700: #0578f2;
     /*  */
     height: 100%;
     background-color: var(--Neutral-50);
@@ -114,6 +114,11 @@ button {
 }
 
 .notification {
-    /* min-width: 100%; */
-    background-color: #3DD4AF;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    min-width: 100%;
+    border-radius: 0;
+    padding: 0;
+    padding-left: 24px;
 }
