--- a/Frontend/src/Components/VacationsArea/VacationCard/VacationCard.css
+++ b/Frontend/src/Components/VacationsArea/VacationCard/VacationCard.css
@@ -1,26 +1,24 @@
 .VacationCard {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    /* max-width: 30%; */
+    width: 32%;
     min-width: 320px;
-    height: 500px;
-    border: 1px solid white;
-    border-radius: 6px;
+    height: 516px;
+    border: 1px solid transparent;
+    border-radius: 12px;
     background-color: white;
     overflow: hidden;
     position: relative;
-    padding-bottom: 16px;
-    /* flex-grow: 1; */
+    padding-bottom: 8px;
 }
 .VacationCard .bg-image {
     display: flex;
-    height: 300px;
+    height: 316px;
     width: 100%;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 16px 24px;
+    padding: 16px 24px 28px 24px;
 }
 .VacationCard .bg-image h3 {
     font-size: 24px;
@@ -46,22 +44,23 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 24px 24px 0px 24px;
+    margin: 4px 24px 0px 24px;
     color: var(--Neutral-700);
+    position: relative;
+    transform:translateY(-12px);
+    background-color: white;
 }
 
 .VacationCard h4 {
+    background-color: var(--Prime-200);
     font-size: 18px;
     font-weight: 100;
-    color: var(--Neutral-500);
+    color: white;
+    text-align: center;
     margin-top: auto;
-}
-
-.VacationCard h4 span {
-    font-size: 20px;
-    font-weight: 400;
-    color: var(--Prime-500);
-    margin-bottom: 4px;
+    border-radius: 4px;
+    padding: 4px;
+    font-weight: 500;
 }
 
 .VacationCard .vacation-dates {
@@ -71,15 +70,13 @@
     flex-direction: row;
     column-gap: 6px;
     align-items: end;
-    margin-bottom: 16px;
-
 }
 
 .VacationCard .vacation-description {
     margin-top: 8px;
     margin-bottom: 16px;
     padding: 0px 4px;
-    text-align: justify;
+    /* text-align: justify; */
     text-justify: auto;
 }
 .VacationCard p {
@@ -89,4 +86,24 @@
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
     white-space: normal;
+}
+
+.VacationCard .dates-wrapper {
+    background-color: var(--Prime-100);
+    border-radius: 10px 10px 0 0;
+    padding: 16px 24px 28px 24px;
+    position: relative;
+    transform:translateY(-12px);
+    box-shadow: 0px -8px 8px rgba(0, 0, 0, 0.06);
+}
+
+.VacationCard .cards-connection {
+    background-color: white;
+    border-radius: 10px 10px 0 0;
+    padding: 12px 24px;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -6px;
+    box-shadow: 0px -8px 8px rgba(0, 0, 0, 0.06);
 }
