--- a/Frontend/src/Components/VacationsArea/VacationCard/VacationCard.css
+++ b/Frontend/src/Components/VacationsArea/VacationCard/VacationCard.css
@@ -1,21 +1,19 @@
 .VacationCard {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    /* max-width: 30%; */
+    width: 32%;
     min-width: 320px;
-    height: 500px;
+    height: 508px;
     border: 1px solid white;
     border-radius: 6px;
     background-color: white;
     overflow: hidden;
     position: relative;
     padding-bottom: 16px;
-    /* flex-grow: 1; */
 }
 .VacationCard .bg-image {
     display: flex;
-    height: 300px;
+    height: 308px;
     width: 100%;
     background-position: center;
     background-size: cover;
@@ -46,15 +44,19 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 24px 24px 0px 24px;
+    margin: 8px 24px 0px 24px;
     color: var(--Neutral-700);
 }
 
 .VacationCard h4 {
     font-size: 18px;
-    font-weight: 100;
-    color: var(--Neutral-500);
+    font-weight: 500;
+    color: white;
     margin-top: auto;
+    background-color: var(--Prime-200);
+    text-align: center;
+    padding: 8px 16px;
+    border-radius: 4px;
 }
 
 .VacationCard h4 span {
@@ -71,8 +73,6 @@
     flex-direction: row;
     column-gap: 6px;
     align-items: end;
-    margin-bottom: 16px;
-
 }
 
 .VacationCard .vacation-description {
@@ -89,4 +89,25 @@
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
     white-space: normal;
+}
+
+.VacationCard .dates-wrapper {
+    position: relative;
+    background-color: var(--Prime-100);
+    border-radius: 8px 8px 0 0;
+    padding: 16px 24px;
+    transform: translateY(-8px);
+    display: flex;
+    column-gap: 8px;
+}
+
+.VacationCard .cards-placeholder {
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+    width: 100%;
+    height: 16px;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0px -8px 8px rgba(0, 0, 0, 0.08);
 }
